--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <p>Natívnym jazykom pre tvorbu Android aplikacii je Java, v ktorej je naprogramovaná aj táto aplikácia.
 Ïalšou monosou, ktorá stojí za zváenie, je C# , u ktorého je ale problém s nedostatoènou podporou 
 (ešte zïaleka nie je takrozšírenı ako Java). Ïalším problémom je Xamarin framework, ktorı slúi na 
-cross-platform development, avšak na tento nástroj sa nám nepodarilo získa študentskú licenciu.
-<caption>IDE:</caption> Android Studio
-<caption>Verzovací systém:</caption> GitHub
+cross-platform development, avšak na tento nástroj sa nám nepodarilo získa študentskú licenciu.<br>
+<b>IDE:</b> Android Studio<br>
+<b>Verzovací systém:</b> GitHub<br>
 </p>
 </section>
 <section>
